@@ -1,3 +1,8 @@
+2007-01-16  OHASHI Akira  <bg66@koka-in.org>
+
+	* mixi.el (mixi-login-use-ssl): New user option.
+	(mixi-login): Use it.
+
 2007-01-15  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-diary-list-regexp): Fix regexp.
